--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
 
 
 
-		<!-- CDI, EJB, JSF -->
+		<!-- CDI, EJB, JSF, Lombok -->
 		<dependency>
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
@@ -107,6 +107,12 @@
 		<dependency>
 			<groupId>org.jboss.spec.javax.ejb</groupId>
 			<artifactId>jboss-ejb-api_3.2_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.20</version>
 			<scope>provided</scope>
 		</dependency>
 		
