--- a/pom.xml
+++ b/pom.xml
@@ -136,8 +136,8 @@
 		<!--  WEBJARS -->
 		<dependency>
 		    <groupId>org.webjars.bower</groupId>
-		    <artifactId>adminlte</artifactId>
-		    <version>2.3.11</version>
+		    <artifactId>github-com-almasaeed2010-AdminLTE</artifactId>
+		    <version>v2.4.0-alpha</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.webjars.bower</groupId>
