--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -7,6 +7,7 @@ Usuario.cadastro.sucesso=O usuário {0} foi cadastrado com sucesso.
 Usuario.atualizado.sucesso=O usuário {0} foi atualizado com sucesso.
 Usuario.excluido.sucesso=O usuário {0} foi excluído com sucesso.
 Usuario.senha.erro.criptografia=Problema na criptografia da senha do usuário: {0}
+Usuario.senha.erro.invalida=Senha Inválida.
 
 Usuario.login.erro=E-mail ou senha inválidos!
 Usuario.login.sucesso=Usuario {0} autenticado!
