--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -11,3 +11,8 @@ Usuario.senha.erro.invalida=Senha Inválida.
 
 Usuario.login.erro=E-mail ou senha inválidos!
 Usuario.login.sucesso=Usuario {0} autenticado!
+
+Automovel.cadastro.sucesso=O Automovel {0} foi cadastrado com sucesso.
+Automovel.atualizado.sucesso=O Automovel {0} foi atualizado com sucesso.
+Automovel.excluido.sucesso=O Automovel {0} foi excluido.
+Automovel.obrigatorio=Campo Obrigatorio.
