Exercicio The Challenge

--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -15,4 +15,5 @@ Usuario.login.sucesso=Usuario {0} autenticado!
 Automovel.cadastro.sucesso=O Automovel {0} foi cadastrado com sucesso.
 Automovel.atualizado.sucesso=O Automovel {0} foi atualizado com sucesso.
 Automovel.excluido.sucesso=O Automovel {0} foi excluido.
+Automovel.erro.cadastro=A Placa {0} já está cadastrada.
 Automovel.obrigatorio=Campo Obrigatorio.
